Attend to code review comments